# nbdev-hello

./: README.md  book_cipher_encryption.html  book_cipher_encryption.html.md  developer_guide.ipynb  encryption.html  encryption.html.md  encryption_vs_hashing.html  encryption_vs_hashing.html.md  index.html  password_hashing.html  password_hashing.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
ks3_computing_lessons/: _modidx.py
nbdev_hello/: _modidx.py
nbs/: 010_encryption_vs_hashing.ipynb  011_practical_book_cipher_encryption.ipynb  011_practical_simple_book_key_encryption.ipynb  012_password_hashing.ipynb  012_practical_password_hashing.ipynb  013_encryption.ipynb  013_practical_encryption.ipynb  01_encryption_vs_hashing.ipynb  02_book_cipher_encryption.ipynb  02_practical_simple_book_key_encryption.ipynb  03_password_hashing.ipynb  04_encryption.ipynb  _quarto.yml  book_cipher_encryption.ipynb  encryption_vs_hashing.ipynb  index.ipynb  nbdev.yml  password_hashing.ipynb  sidebar.yml
site_libs/bootstrap/: bootstrap-0bd19de4f9b927cf288b3f214a6fcc3c.min.css
