[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ks3-computing-lessons"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "rdh", email = "root@codecutter.io"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/rhalldearn/ks3-computing-lessons"
Documentation = "https://rhalldearn.github.io/ks3-computing-lessons/"

[project.entry-points.nbdev]
nbdev_hello = "nbdev_hello._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "nbdev_hello.__version__"}

[tool.setuptools.packages.find]
include = ["nbdev_hello"]

[tool.nbdev]
lib_name = "nbdev_hello"
lib_path = "nbdev_hello"
nbs_path = "nbs"
doc_path = "_docs"
repo = "rhalldearn/ks3-computing-lessons"
recursive = true
custom_sidebar = false
