[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ks3-computing-lessons"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "rdh", email = "root@codecutter.io"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/rhalldearn/ks3-computing-lessons"
Documentation = "https://rhalldearn.github.io/ks3-computing-lessons/"

[tool.setuptools.dynamic]
version = {attr = "ks3_computing_lessons.__version__"}

[tool.setuptools.packages.find]
include = ["ks3_computing_lessons"]

[tool.nbdev]
lib_name = "ks3-computing-lessons"
lib_path = "ks3_computing_lessons"
nbs_path = "nbs"
doc_path = "_docs"
repo = "rhalldearn/ks3-computing-lessons"
recursive = true
custom_sidebar = false
